# cmake_playground

./: .gitignore  CMakeLists.txt  Car.cpp  main.cpp
Car/: CMakeLists.txt  Car.cpp
car_lib/: CMakeLists.txt
car_lib/src/: Car.cpp
include/: Car.h
process_findingLibrary/: CMakeLists.txt  main.cpp
